1998-04-13  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-cal.c (day_view_range_activated): Create new object and
	add it to the calendar.  You can now select a range in the
	full-day view, hit Return, and a new event will be added at the
	selected range.  I still have to figure out how to focus this new child.

	* gncal-full-day.c (paint_back): Rewrote function to avoid
	painting an area more than once -- eliminate flicker.
	(paint_back_rows): New function that calls paint_back() only for
	the area of the specified rows.
	(gncal_full_day_button_press): 
	(gncal_full_day_button_release): 
	(gncal_full_day_motion): Made these functions use
	paint_back_rows() instead of paint_back(), to eliminate flicker.  Wheee!

1998-04-12  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-cal.c (setup_day_view): We now connect to the
	range_activated signal of the fullday widget instead of catching
	key presses ourselves.
	(day_view_range_activated): New function that creates a new
	iCalObject and inserts it into the calendar, not finished yet.

1998-04-11  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gncal-full-day.c (get_time_from_rows): New function, calculates
	a pair of time_t values from the specified start and number of rows.

	* gncal-full-day.h (GncalFullDayClass): New signal
	"range_activated".  It is emitted when a range is selected and the
	user hits Return.
	(gncal_full_day_selection_range): New function, returns the
	selected range.

	* gncal-full-day.c (struct drag_info): Moved selection information
	to their own fields instead of sharing the child's drag fields.
	This allows us to keep the selection when a child is moved.
	(recompute_motion): Made the case when (row < di->sel_click_row)
	work correctly.

1998-04-11  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-cal.c (gnome_calendar_goto): Add support for navigating
	on the day view.

	* timeutil.c (time_start_of_day, time_end_of_day, time_day_hour):